# SiriusUniversityProjects

./: README.md
 numerical_analytical_methods/: difference_scheme.ipynb  monteKarlo.ipynb
Derivatives/: OptionPrice.ipynb  derivatives_a1.ipynb  derivatives_a2_a3.ipynb  derivatives_b1_b2.ipynb
Statistics_Of_Stochastic_Process/: README.md  approximation_methods.ipynb  brownian_motion.ipynb  parametric_estimation.ipynb  stochastic_integral.ipynb
Stochastic_Differential_Equations/: stohast_lab.ipynb
academic_work/: AutoEncoder.ipynb
alphas/: alphaStructure.ipynb
cpp/: README.md
cpp/binary_search_tree/: CMakeLists.txt  elements.txt  main.cpp  tree.cpp  tree.h
cpp/matrices/: CMakeLists.txt  CSR.hpp  Matrix.cpp  Matrix.h  MatrixCOO.h  MatrixCSC_CSR.cpp  MatrixCSC_CSR.h  MatrixDence.cpp  MatrixDence.h  main.cpp  matrix.txt
cpp/optimal_path/: CMakeLists.txt
cpp/optimal_path/src/: CMakeLists.txt  main.cpp  opt_path.cpp  opt_path.h
cpp/point_in_polygon/: CMakeLists.txt  main.cpp  parse_arguments.cpp  parse_arguments.h  poly.txt  polygon.cpp  polygon.h
credit_score/: confidence_interval.ipynb  credit_score_lightgbm.ipynb  credit_score_logreg.ipynb
diploma_project/: 1d_cnn.ipynb  Alpha.py  README.md  developing_alpha_strategies.ipynb  lstm_nn.ipynb
haskell/: additional_task.hs  bisectionMethod.hs  lab2.hs  newtonMethod.hs  prices_example.hs  sem10.hs  sem2.hs  sem4.hs  sem6.hs  sem7.hs  sem9.hs
